# Multi-Agent-Financial-Research-System

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
scripts/: decision_backtest.py
src/: __init__.py
src/agents/: analysis_agent.py  base.py  data_agent.py  planner.py  research_agent.py  risk_agent.py  strategy_selector.py  trading_agent.py  workflow.py
src/api/: dependencies.py  main.py
src/api/routes/: analyze.py  backtest.py  portfolio.py  trade.py
src/backtesting/: data_loader.py  engine.py
src/core/: config.py  logging.py
src/models/: schemas.py
src/observability/: decision_log.py  logger.py  tracer.py
src/services/: evaluation.py  memory.py  rag.py  trading_engine.py
src/tools/: indicators.py  market_data.py  news.py  portfolio.py  registry.py
tests/: conftest.py  live_smoke_test.py
tests/integration/: test_api.py  test_e2e_smoke.py
tests/unit/: test_evaluation.py  test_memory.py  test_tool_registry.py  test_tools.py  test_tracer.py  test_trading_engine.py
