[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-agent-financial-research"
version = "0.1.0"
description = "Production-grade multi-agent financial research and trading simulation system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Multi-Agent Financial Research Team" }]

dependencies = [
    # LLM & Agent orchestration
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "openai>=1.50.0",

    # API framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Data & validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # HTTP client (async)
    "httpx>=0.27.0",

    # Vector DB & RAG
    "faiss-cpu>=1.8.0",
    "rank-bm25>=0.2.2",

    # Data processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",

    # Database
    "aiosqlite>=0.20.0",

    # Logging
    "structlog>=24.4.0",

    # Environment
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.6.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
